# tiki-200k-products-crawler

./: .gitignore  README.md  api.py  config.py  main.py  processor.py  product_list.csv  pyproject.toml  rate_limiter.py  storage.py
config/: config.py  settings.py
etl/extract/: crawler.py
etl/load/: loader.py  writer.py
etl/transform/: batch_processor.py  normalizer.py
pipeline/: product_pipeline.py
tests/: test_normalizer.py
utils/: create_tables.py  insert.py
