[project]
name = "project-2"
version = "0.1.0"
description = ""
authors = [
    {name = "tungbi811"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
